[workspace]
members = [".", "lane_core"]
resolver = "2"

[package]
name = "lane_switchboards"
version = "0.7.0"
edition = "2021"
description = "Telecom-inspired OTP actor runtime for Rust: mailbox routing, supervision trees, let-it-crash fault isolation, and distributed messaging"
license = "MIT"
readme = "README.md"
keywords = ["actor", "otp", "supervision", "concurrency", "erlang"]
categories = ["asynchronous", "concurrency"]
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "build.rs",
    "proto/**",
    "src/**",
    "docs/**",
]

[dependencies]
lane_core = { path = "lane_core" }
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", features = ["transport", "codegen"] }
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1"
tokio = { version = "1.38", features = ["full"] }
tracing = { version = "0.1", features = ["log", "max_level_info", "release_max_level_warn"] }
# serde: ServiceRecord and ConsistencyConfig (HTTP/debug fixtures — not on gRPC wire)
serde = { version = "1.0", features = ["derive", "rc"] }
actix = "0.13"
reqwest = "0.12"
async-trait = "0.1"
arc-swap = "1.7"
once_cell = "1.20"
futures = "0.3"
futures-util = "0.3"
murmur3 = "0.5"
rustls = { version = "0.23", optional = true, features = ["aws_lc_rs"] }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2.2", optional = true }
webpki-roots = { version = "0.26", optional = true }

[features]
default = []
metrics = []
watch_sync = []
tls = [
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:rustls-pemfile",
    "dep:webpki-roots",
    "tonic/tls",
    "tonic/tls-webpki-roots",
]

[dev-dependencies]
rcgen = "0.13"
tokio = { version = "1.38", features = ["full"] }
ractor = { version = "0.14", features = ["async-trait"] }
ractor-supervisor = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
actix-web = "4"
actix-test = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
url = "2"
anyhow = "1"
futures-util = "0.3"
tokio-test = "0.4"
hmac = "0.12"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["std"] }
blake2 = "0.10"
base64 = "0.22"
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "wire"
harness = false

[[bench]]
name = "ecommerce"
harness = false

[[example]]
name = "ecommerce_flash_sale"
path = "examples/ecommerce_flash_sale.rs"

[[example]]
name = "calculator_mesh"
path = "examples/calculator_mesh.rs"

[[example]]
name = "calculator_mesh_simplified"
path = "examples/calculator_mesh_simplified.rs"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

# --- Stream (TCP / optional TLS) ---

[[example]]
name = "stream_calc"
path = "examples/stream_calc.rs"

# --- Core runtime demos ---

[[example]]
name = "envelope_demo"
path = "examples/envelope_demo.rs"

[[example]]
name = "supervisor_strategies"
path = "examples/supervisor_strategies.rs"

[[example]]
name = "service"
path = "examples/service.rs"

[[example]]
name = "service_complex"
path = "examples/service_complex.rs"

[[example]]
name = "service_complex_cluster"
path = "examples/service_complex_cluster.rs"

[[example]]
name = "hot_upgrade"
path = "examples/hot_upgrade.rs"

[[example]]
name = "distributed_demo"
path = "examples/distributed_demo.rs"

[[example]]
name = "tls_distributed"
path = "examples/tls_distributed.rs"
required-features = ["tls"]

[[example]]
name = "consistency"
path = "examples/consistency.rs"
required-features = ["tls"]

[[example]]
name = "horizontal_scaling"
path = "examples/horizontal_scaling.rs"

[[example]]
name = "horizontal_scaling_rest_for_one"
path = "examples/horizontal_scaling_rest_for_one.rs"

[[example]]
name = "service_mesh"
path = "examples/service_mesh.rs"

# --- Calculator & supervision (switchboard routing + fault recovery) ---

[[example]]
name = "calculator"
path = "examples/calculator.rs"

[[example]]
name = "single_child_supervisor"
path = "examples/single_child_supervisor.rs"

[[example]]
name = "resilient_calculator"
path = "examples/resilient_calculator.rs"

[[example]]
name = "resilient_calculator_timer"
path = "examples/resilient_calculator_timer.rs"

[[example]]
name = "recoverable_timer_calc"
path = "examples/recoverable_timer_calc.rs"

[[example]]
name = "rest_for_one_calculator_timer"
path = "examples/rest_for_one_calculator_timer.rs"

[[example]]
name = "rest_for_one_calculator_timer_optimized"
path = "examples/rest_for_one_calculator_timer_optimized.rs"

[[example]]
name = "handle_timeout_calculator_timer"
path = "examples/handle_timeout_calculator_timer.rs"

[[example]]
name = "grpc_cluster"
path = "examples/grpc_cluster.rs"

[[example]]
name = "multi_dc_heartbeat"
path = "examples/multi_dc_heartbeat.rs"

[[example]]
name = "multi_dc_heartbeat_topology"
path = "examples/multi_dc_heartbeat_topology.rs"

[[example]]
name = "multi_dc_heartbeat_prod"
path = "examples/multi_dc_heartbeat_prod.rs"
